# OS

./: README.md
Lab1cmake/: CMakeLists.txt  UnitTest.cpp  creator.cpp  main.cpp  reporter.cpp
Lab1cmake/Core/: employee.cpp  employee.h  helpers.cpp
colloqium2/src/main/java/com/hohlov/todo_api/: Task.java  TaskController.java
colloqium2/src/main/resources/: application.properties
colloquium1/: CMakeLists.txt  list.cpp  list.h  main.cpp  tasks.cpp  tasks.h
colloquium1/tests/: UnitTests
colloquium2/: README.md  docker-compose.yml  pom.xml
colloquium2/gateway_service/: Dockerfile  pom.xml
colloquium2/gateway_service/src/main/java/com/hohlov/gateway_service/: GatewayController.java  GatewayServiceApplication.java  SecurityConfig.java
colloquium2/gateway_service/src/main/resources/: application.properties
colloquium2/gateway_service/src/test/java/com/hohlov/gateway_service/: GateWayControllerTest.java  GatewayControllerTest.java  GatewayControllerTests.java  GatewayServiceApplicationTests.java
colloquium2/gateway_service/src/test/java/com/hohlov/todo_api/: TaskControllerTest.java
colloquium2/src/main/java/com/hohlov/todo_api/: TaskRepository.java  TodoApiApplication.java
colloquium2/todo_api/src/main/java/com/hohlov/todo_api/: GlobalExceptionHandler.java  Task.java  TaskController.java  TaskRepository.java
colloquium2/todo_api/src/main/resources/: application.properties
colloquium2/todo_api/src/test/java/com/hohlov/todo_api/: TaskControllerTest.java  TaskControllerTests.java
colloquium2/todo_api/todo-api/: Dockerfile  pom.xml
colloquium2/todo_api/todo-api/data/: tasks.db
colloquium2/todo_api/todo-api/src/main/java/com/hohlov/todo_api/: TaskController.java  TodoApiApplication.java
colloquium2/todo_api/todo-api/src/main/resources/: application.properties
colloquium2/todo_api/todo-api/src/test/java/com/hohlov/todo_api/: TaskControllerTests.java  TodoApiApplicationTests.java
kollok/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  list.cpp  list.h  main.cpp  palindrom.cpp  tasks.cpp  tasks.h
lab1/: lab1.sln
lab1/Core/: employee.cpp  employee.h  helpers.cpp  helpers.h
lab1/Creator/: Creator.vcxproj  Creator.vcxproj.filters  creator.cpp
lab1/Main/: Main.vcxproj  Main.vcxproj.filters  main.cpp
lab1/Reporter/: Reporter.vcxproj  Reporter.vcxproj.filters  employee.h  reporter.cpp
lab1/UnitTests/: UnitTest.cpp  UnitTest.vcxproj
lab2/: CMakeLists.txt  UnitTests.cpp  average.cpp  average.h  main.cpp  min_max.cpp  min_max.h  tests.cpp
lab2 20/: CMakePresets.json  average.cpp  average.h  cmakelists.txt  main.cpp  min_max.cpp  min_max.h  tests.cpp
lab2 20/Core/: array_functions.cpp  array_functions.h
lab2/Core/: array_functions.cpp  array_functions.h
lab3/: CMakeLists.txt  main.cpp
lab3/include/: array.h  marker.h
lab3/sources/: array.cpp  marker.cpp
lab3/sources/include/: array.h  marker.h
lab3/tests/: array_tests  end2end.cpp
lab4/: CMakeLists.txt
lab4/include/: filequeue.h
lab4/sources/: filequeue.cpp  receiver.cpp  sender.cpp
lab4/tests/: end2end.cpp  filequeue_test.cpp  receiver_test.cpp  sender_test.cpp
lab5/: CMakeLists.txt
lab5/include/: ClientHandler.h  employee.h  message.h  pipes.h
lab5/sources/: ClientHandler.cpp  client.cpp  employee.cpp  message.cpp  pipes.cpp  server.cpp
lab5/tests/: scenarioTests.cpp  unitTests.cpp
